package com.sismics.books.core.model.jpa;

public abstract class Content {
  String display() {
    return "Common Content";
  }
}
